Reworked whole indexation and search process